Back to Java8 compatibility